fix handle fallback using function calling and vector search